Fixed overflow

--- a/steam-account-manager/index.css
+++ b/steam-account-manager/index.css
@@ -8,7 +8,6 @@ body,html{
   font-weight: 100;
   background-color: #315c91;
   z-index: -2;
-  overflow:hidden;
 }
 p{
   font-size: 1.2em;
